<resources>
    <string name="app_name">Inventory</string>
    <string name="action_add">Add</string>
    <string name="item_sale_button">Sale</string>

    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_no">Supplier Phone No</string>
    <string name="save">Save</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_edit_product">Edit Product</string>
    <string name="editor_add_product">Add Product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Failed to update product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_all">Delete All</string>
    <string name="main_delete_inventory_successful">Deleted inventory successfully</string>
    <string name="main_delete_inventory_failed">Deleting inventory unsuccessful</string>
    <string name="editor_delete">Delete</string>
    <string name="editor_delete_successful">Product deleted successfully</string>
    <string name="editor_delete_failed">Product delete failed!</string>

    <string name="item_product_name">Name : %1$s</string>
    <string name="item_product_price">Price : ₹ %1$.2f</string>
    <string name="item_product_quantity">Quantity : %1$d</string>


    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="editor_name_required">Valid name required!</string>
    <string name="editor_price_required">Valid price required!</string>
    <string name="editor_quantity_required">Valid quantity required!</string>
    <string name="item_out_of_stock">Out of stock!</string>
    <string name="button_for_product_details">Button for product details</string>
    <string name="detail_supplier_name">Supplier : %1$s</string>
    <string name="detail_supplier_phone">Supplier Phone : %1$d</string>
    <string name="phone_not_available">Supplier Phone : NA</string>
    <string name="order">Order</string>
    <string name="empty_inventory">Your inventory is empty. Click on the plus button and enter the following details to create a product : \n
        1. Product name\n2.Product Price\n3.Product quantity</string>
    <string name="no_phone_number">Enter valid phone number to order</string>
</resources>
